--- a/BookFarm/Application Layer/Common/XIB/GallaryViewCell.xib
+++ b/BookFarm/Application Layer/Common/XIB/GallaryViewCell.xib
@@ -94,13 +94,32 @@
                                     <constraint firstItem="XbX-vw-dwe" firstAttribute="top" secondItem="cEv-HY-jme" secondAttribute="top" constant="4" id="elX-dT-Fum"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TcI-88-SjX">
+                                <rect key="frame" x="315" y="4" width="25" height="25"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="crown" translatesAutoresizingMaskIntoConstraints="NO" id="IMG-dF-X0i">
+                                        <rect key="frame" x="2" y="2" width="21" height="21"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="Wjl-8G-Kt8"/>
+                                    <constraint firstAttribute="trailing" secondItem="IMG-dF-X0i" secondAttribute="trailing" constant="2" id="XmL-zz-YF0"/>
+                                    <constraint firstItem="IMG-dF-X0i" firstAttribute="top" secondItem="TcI-88-SjX" secondAttribute="top" constant="2" id="nKb-Hk-tgR"/>
+                                    <constraint firstAttribute="width" constant="25" id="yNy-jA-1Wn"/>
+                                    <constraint firstItem="IMG-dF-X0i" firstAttribute="leading" secondItem="TcI-88-SjX" secondAttribute="leading" constant="2" id="zDq-Gm-pQF"/>
+                                    <constraint firstAttribute="bottom" secondItem="IMG-dF-X0i" secondAttribute="bottom" constant="2" id="zyv-QV-5yw"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="cEv-HY-jme" firstAttribute="leading" secondItem="X6p-0P-Q3J" secondAttribute="leading" constant="2" id="0Ga-qe-MfL"/>
+                            <constraint firstAttribute="trailing" secondItem="TcI-88-SjX" secondAttribute="trailing" constant="4" id="2WN-hq-mn4"/>
                             <constraint firstItem="lKe-mp-0qy" firstAttribute="leading" secondItem="X6p-0P-Q3J" secondAttribute="leading" constant="2" id="9Bc-hT-7gC"/>
                             <constraint firstAttribute="trailing" secondItem="cEv-HY-jme" secondAttribute="trailing" constant="2" id="EAo-IO-PJ0"/>
                             <constraint firstItem="lKe-mp-0qy" firstAttribute="top" secondItem="X6p-0P-Q3J" secondAttribute="top" constant="2" id="Pab-Y1-y9d"/>
+                            <constraint firstItem="TcI-88-SjX" firstAttribute="top" secondItem="X6p-0P-Q3J" secondAttribute="top" constant="4" id="a0g-u3-2PM"/>
                             <constraint firstItem="cEv-HY-jme" firstAttribute="top" secondItem="lKe-mp-0qy" secondAttribute="bottom" constant="2" id="dBZ-3z-y4k"/>
                             <constraint firstAttribute="trailing" secondItem="lKe-mp-0qy" secondAttribute="trailing" constant="2" id="lb6-Rt-iOk"/>
                             <constraint firstAttribute="bottom" secondItem="cEv-HY-jme" secondAttribute="bottom" constant="2" id="vT3-p6-UvQ"/>
@@ -129,6 +148,7 @@
             <size key="customSize" width="348" height="318"/>
             <connections>
                 <outlet property="ivBookImage" destination="lKe-mp-0qy" id="EU2-88-7BR"/>
+                <outlet property="ivPrime" destination="IMG-dF-X0i" id="cXZ-1F-dCp"/>
                 <outlet property="lblBookDetails" destination="0dh-hT-UT8" id="brW-sl-WCd"/>
                 <outlet property="lblBookName" destination="XbX-vw-dwe" id="m6h-Dl-vmx"/>
                 <outlet property="lblRentPrice" destination="MOv-aS-hhD" id="D1c-QN-iuR"/>
@@ -138,4 +158,7 @@
             <point key="canvasLocation" x="289.85507246376812" y="184.15178571428569"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="crown" width="32" height="32"/>
+    </resources>
 </document>
